force-app/main/default/objects/Flow_Error_Pattern__c/Flow_Error_Pattern__c.object-meta.xml
<CustomObject>
    <label>Flow Error Pattern</label>
    <pluralLabel>Flow Error Patterns</pluralLabel>
    <nameField>
        <label>Pattern Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>