force-app/main/default/objects/Flow_Error_Pattern__c/fields/Error_Signature__c.field-meta.xml
<CustomField>
    <fullName>Error_Signature__c</fullName>
    <externalId>true</externalId>
    <label>Error Signature</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>