force-app/main/default/objects/Flow_Error_Pattern__c/fields/Flow_API_Names__c.field-meta.xml
<CustomField>
    <fullName>Flow_API_Names__c</fullName>
    <label>Flow API Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>