force-app/main/default/objects/Flow_Error_Pattern__c/fields/Occurrence_Count__c.field-meta.xml
<CustomField>
    <fullName>Occurrence_Count__c</fullName>
    <label>Occurrence Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>