force-app/main/default/objects/Flow_Error_Pattern__c/fields/Pattern_Description__c.field-meta.xml
<CustomField>
    <fullName>Pattern_Description__c</fullName>
    <label>Pattern Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>