force-app/main/default/objects/Flow_Error_Pattern__c/fields/Pattern_Name__c.field-meta.xml
<CustomField>
    <fullName>Pattern_Name__c</fullName>
    <label>Pattern Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>