force-app/main/default/objects/Flow_Error_Pattern__c/fields/Pattern_Type__c.field-meta.xml
<CustomField>
    <fullName>Pattern_Type__c</fullName>
    <label>Pattern Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>