force-app/main/default/objects/Flow_Error_Pattern__c/fields/Recommended_Fix__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Fix__c</fullName>
    <label>Recommended Fix</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>